mon/grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: mon
spec:
  selector:
    app: grafana
  ports:
  - name: http
    port: 3000
