mon/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: mon
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns.alpha.kubernetes.io/target: "lga1.desertbluffs.com"
spec:
  tls:
    - hosts:
        - l.desertbluffs.com
  rules:
    - host: l.desertbluffs.com
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 3000
