mon/grafana/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana
  namespace: mon
spec:
  podSelector:
    matchLabels:
      app: grafana
  ingress:
  - ports:
    - port: 3000
    from: []
